lead block without fancy gallery

--- a/app/blocks/button-heart/button-heart.scss
+++ b/app/blocks/button-heart/button-heart.scss
@@ -107,4 +107,40 @@
       }
     }
   }
+
+  &_big {
+    @include screen('sm') {
+      width: 27px;
+      height: 24px;
+    }
+
+    #{$b}__icon {
+      @include screen('sm') {
+        width: 27px;
+        height: 24px;
+      }
+
+      &_full {
+        @include screen('sm') {
+          width: 27px;
+          height: 24px;
+        }
+      }
+    }
+  }
+
+  &_small {
+    width: 20px;
+    height: 17px;
+
+    #{$b}__icon {
+      width: 20px;
+      height: 17px;
+
+      &_full {
+        width: 20px;
+        height: 17px;
+      }
+    }
+  }
 }
