--- a/app/blocks/page-title/page-title.pug
+++ b/app/blocks/page-title/page-title.pug
@@ -1,3 +1,3 @@
-mixin page-title()
-  +b.page-title&attributes(attributes)
+mixin page-title(tag)
+  +b(tag || 'h2').page-title&attributes(attributes)
     block
