--- a/app/components/breadcrumbs-box/breadcrumbs-box.scss
+++ b/app/components/breadcrumbs-box/breadcrumbs-box.scss
@@ -1,4 +1,9 @@
 .breadcrumbs-box {
   display: block;
+  padding: 18px 0 15px;
   border-bottom: 1px solid $color-border-light;
+
+  @include screen('lg') {
+    padding-top: 14px;
+  }
 }
