--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -799,7 +799,7 @@ block content
         p Блок: blocks/add-button
       +ui-section-content
         +ui-description .add-button
-        +add-button
+        +add-button.__link(href="#" data-active-name="Added to Favorites" data-name="Add to Favorites") Add to Favorites
 
     //- Address list
     +ui-section
