--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -33,7 +33,7 @@ $color-grey-dark:#151b25;
 $color-placeholder: #777; // Основной цвет для placeholder
 $color-input: black; // Основной цвет input, select и textarea
 $color-main: #46c2a9; // Основной фирменный цвет
-$color-border: #ccc; // Основной цвет границ таблиц, секций
+$color-border: #5a5c5c; // Основной цвет границ таблиц, секций
 $color-text-green:#2ee0c9;
 $color-gradient-one:#0caecc;
 $color-gradient-two:#30e3c9;
