--- a/app/blocks/add-button/add-button.scss
+++ b/app/blocks/add-button/add-button.scss
@@ -1,3 +1,36 @@
 .add-button {
   $b: &;
+
+  color: $color-white;
+  display: inline-flex;
+  align-items: center;
+
+  &__heart {
+    margin-right: 9px;
+
+    @include screen('xl') {
+      margin-right: 7px;
+    }
+
+    @include screen('lg') {
+      margin-right: 8px;
+    }
+  }
+
+  &:hover {
+
+    .button-heart {
+      &__icon {
+        filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, 0));
+
+        &_full {
+          filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
+        }
+      }
+
+      &__bottom {
+        opacity: 1;
+      }
+    }
+  }
 }
