--- a/app/blocks/info-price/info-price.scss
+++ b/app/blocks/info-price/info-price.scss
@@ -1,3 +1,34 @@
 .info-price {
   $b: &;
+
+  &__label {
+    @include text16;
+
+    font-weight: 300;
+    margin-bottom: 4px;
+
+    @include screen('lg') {
+      text-align: right;
+      margin-bottom: 2px;
+    }
+
+    @include screen('sm') {
+      @include text15;
+
+      margin-bottom: 0;
+      text-align: left;
+      line-height: (24/15);
+    }
+  }
+
+  &__text {
+    @include heading-3;
+
+    font-weight: 700;
+    line-height: (26/25);
+
+    @include screen('sm') {
+      @include heading-4;
+    }
+  }
 }
