--- a/app/blocks/page-title/page-title.scss
+++ b/app/blocks/page-title/page-title.scss
@@ -1,3 +1,19 @@
 .page-title {
   $b: &;
+
+  @include heading-2;
+
+  font-weight: 700;
+
+  @include screen('xl') {
+    @include heading-1-sm;
+
+    line-height: 1.2;
+  }
+
+  @include screen('sm') {
+    @include heading-3;
+
+    line-height: 1.2;
+  }
 }
