--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -139,4 +139,97 @@
       pointer-events: none;
     }
   }
+
+  &__loupe {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 43px;
+    height: 41px;
+    background-color: rgba($color-grey-dark, .5);
+    transition: background $ease-main;
+    z-index: 2;
+
+    &:hover {
+      background-color: rgba($color-grey-dark, .8);
+    }
+
+    &-icon {
+      fill: $color-white;
+      font-size: 0;
+      line-height: 0;
+      width: 21px;
+      height: 21px;
+      filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
+    }
+  }
+
+  &_dark {
+
+    #{$b}__button {
+      width: 43px;
+      height: 100px;
+      background-color: rgba($color-grey-dark, .2);
+      transition: background $ease-main;
+
+      @include screen('sm') {
+        width: 27px;
+        height: 38px;
+        background-color: rgba($color-white, 0);
+      }
+
+      &:hover {
+        background-color: rgba($color-grey-dark, .5);
+
+        @include screen('sm') {
+          background-color: rgba($color-white, 1);
+        }
+      }
+
+      &-icon {
+        fill: $color-white;
+        filter: drop-shadow(1px 1px 0 rgba(34, 42, 46, .2));
+
+        @include screen('sm') {
+          fill: $color-arrow;
+          filter: none;
+        }
+      }
+    }
+  }
+
+  &_gallery {
+
+    #{$b}__container {
+      height: 100%;
+      width: 100%;
+    }
+
+    #{$b}__buttons {
+      align-items: center;
+      justify-content: space-between;
+
+      @include screen('sm') {
+        width: calc(100% + 40px);
+        left: -20px;
+      }
+    }
+
+    #{$b}__slide {
+      display: inline-block;
+      font-size: 0;
+      line-height: 0;
+      width: auto;
+      height: 100% !important;
+      opacity: .52;
+      transition: opacity .5s ease;
+
+      &.swiper-slide-active {
+        opacity: 1;
+      }
+    }
+  }
 }
