add fancy gallery and fix images lost

--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -29,7 +29,7 @@ mixin slider-gallery(buttons, loupe)
         +e.button._next.js-slider-button-next
           +icon('slider-arrow').__button-icon
     if loupe
-      +e.A.loupe
+      +e.A.loupe.js-open-gallery(data-targets="gallery")
         +icon('loupe').__loupe-icon
 
 
