--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -16,11 +16,15 @@
       flex: 1;
       box-sizing: border-box;
       padding-right: 50px;
-      padding-top: 30px;
+      padding-top: 26px;
 
       @include screen('lg') {
         width: 100%;
         padding-right: 0;
+      }
+
+      @include screen('sm') {
+        padding-top: 24px;
       }
     }
 
