--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -15,18 +15,19 @@ block content
       +section-content
         +content-zone
           p One Neal Street offers a&nbsp;modern, self-contained office solution, which is&nbsp;located just off of&nbsp;Covent Garden&rsquo;s Long Acre. Unbranded and fully furnished, this renovated boutique office space is&nbsp;flooded with natural light. One Neal Street offers some twelve-thousand square foot of&nbsp;open-plan office space across the third floor, which can accommodate up&nbsp;to&nbsp;two hundred people. It&nbsp;also benefits from 24/7&nbsp;access, a&nbsp;manned reception and large kitchen and breakout area.
-    +section._inner
+    +section._inner._inner_bmg
       +section-header
         +section-title('h3') Location
         +e.subtitle 8-10 New Fetter Ln, London EC4A 1AZ
       +section-content
-        +map#map
-    +section._inner
+        +map._inner#map
+        +transport-table
+    +section._inner._inner_head-bmg._inner_gmg
       +section-header
         +section-title('h3') Building rules
       +section-content
         +content-zone
-          p One Neal Street offers some twelve-thousand square foot of&nbsp;open-plan office space across the third floor, which can accommodate up&nbsp;to&nbsp;two hundred people. It&nbsp;also benefits from 24/7&nbsp;access, a&nbsp;manned reception and large kitchen and breakout area.
+          p One Neal Street offers some twelve-thou&shy;sand square foot of&nbsp;open-plan office space across the third floor, which can accommo&shy;date up&nbsp;to&nbsp;two hundred people. It&nbsp;also bene&shy;fits from 24/7&nbsp;access, a&nbsp;manned reception and large kitchen and breakout area.
           ul
             li 24 hours access
             li Pets allowed
