--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -843,6 +843,24 @@ block content
         +ui-description .page-title
         +page-title Page title
 
+    //- Lead for space.html
+    +ui-section
+      +ui-section-head
+        h2 Lead on space.html
+        p Блок: components/lead
+      +ui-section-content
+        +ui-description .lead
+        +lead
+
+    //- Transport table
+    +ui-section
+      +ui-section-head
+        h2 Transport table
+        p Блок: blocks/transport-table
+      +ui-section-content
+        +ui-description .transport-table
+        +transport-table
+
   script
     |
     | $('.ui-kit__section').each(function (i) {
