--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -69,6 +69,8 @@ $color-form-border-light: #ecedee;
 $color-gray-light: #d1d2d3;
 $color-form-border-gray: #373e47;
 $color-accent: #48a4b5;
+$color-bus: #c64444;
+$color-plane: #60a2d0;
 
 // ##########
 // Transitions
