--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -1,10 +1,22 @@
 .content-zone {
   @include text-big;
 
+  line-height: 1.45;
+
+  @include screen('sm') {
+    @include text15;
+
+    line-height: 1.34;
+  }
+
   h1 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-1;
@@ -13,7 +25,11 @@
   h2 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-2;
@@ -22,7 +38,11 @@
   h3 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-3;
@@ -31,7 +51,11 @@
   h4 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-4;
@@ -40,7 +64,11 @@
   h5 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-5;
@@ -49,16 +77,29 @@
   h6 {
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
     }
 
     @include heading-6;
   }
 
   p {
+    hyphens: auto;
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 30px;
+
+      @include screen('xl') {
+        margin-bottom: 32px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 29px;
+      }
     }
 
     small {
@@ -111,7 +152,11 @@
   ul {
     @include ullist;
 
-    line-height: (34/18);
+    line-height: 1.45;
+
+    @include screen('sm') {
+      line-height: 1.2;
+    }
   }
 
   ol {
