facilties and start offers

--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -53,8 +53,22 @@
       }
     }
 
+    &_smg {
+      margin-bottom: 72px;
+
+      @include screen('sm') {
+        margin-bottom: 37px;
+      }
+    }
+
     &:last-child {
       margin-bottom: 0;
+    }
+
+    .tabs {
+      @include screen('sm') {
+        margin-top: -7px;
+      }
     }
   }
 
@@ -169,6 +183,14 @@
 
       @include screen('sm') {
         margin-bottom: 12px;
+      }
+    }
+
+    #{$b}_inner_head-gmg & {
+      margin-bottom: 33px;
+
+      @include screen('sm') {
+        margin-bottom: 15px;
       }
     }
 
