--- a/app/components/content/content.pug
+++ b/app/components/content/content.pug
@@ -3,6 +3,6 @@ mixin content()
     .container.container_content
       +e.column_left
         block
-        +content-left
+        //- +content-left
       +e.column_right.hide-lg(data-sticky-parent)
         +scroll-form
