--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -1,70 +1,128 @@
 .tabs {
-  $tab-gap: 25px;
- 
+  $tab-gap: 5px;
+  $b: &;
 
   display: flex;
+  flex-wrap: wrap;
   font-size: 0;
   margin-top: -$tab-gap;
 
   &__tab {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: $tab-gap;
+    box-sizing: border-box;
     border-top: 1px solid $color-border-light;
+    border-bottom: 1px solid $color-border-light;
     border-right: 1px solid $color-border-light;
-    // transition: border-color $ease-main, opacity $ease-main;
-    padding: 23px 0px 21px;
-    &:first-child {
-      border-left: 1px solid $color-border-light;
-      border-radius: 3px 0 0 3px;
-    }
-    &:last-child {
-      border-radius:0 3px 3px 0;
-    }
-    cursor: pointer;
-    font-size: 17px;
-    font-weight: 700;
-    letter-spacing: -0.34px;
+    transition: box-shadow $ease-main;
+    padding: 21px 10px 22px;
     width: 25%;
-    transition: .3s;
-    border-bottom: 1px solid;
+    cursor: pointer;
+    font-weight: 700;
+    text-align: center;
+
+    @include text-big;
+
+    @include screen('sm') {
+      border-right: none;
+      border-bottom-width: 2px;
+      text-transform: uppercase;
+      padding: 8px 7px 6px;
+
+      @include text12;
+
+      line-height: 1.2;
+    }
+
+    &:nth-child(5n+1) {
+      border-left: 1px solid $color-border-light;
+      border-radius: 3px 0 0;
+
+      @include screen('sm') {
+        border-left: none;
+        border-radius: 0;
+      }
+    }
+
+    &:nth-child(4n) {
+      border-radius: 0 3px 0 0;
+
+      @include screen('sm') {
+        border-radius: 0;
+      }
+    }
+
+    &:hover,
     &.active {
-      border-bottom: 6px solid;
+      box-shadow: inset 0 -5px 0 $color-border-light;
+
+      @include screen('sm') {
+        box-shadow: inset 0 -4px 0 $color-border-light;
+      }
+    }
+
+    &_orange {
+      border-bottom-color: $color-hot-desk;
+
+      &:hover,
+      &.active {
+        box-shadow: inset 0 -5px 0 $color-hot-desk;
+
+        @include screen('sm') {
+          box-shadow: inset 0 -4px 0 $color-hot-desk;
+        }
+      }
+    }
+
+    &_red {
+      border-bottom-color: $color-dedicated-desk;
+
+      &:hover,
+      &.active {
+        box-shadow: inset 0 -5px 0 $color-dedicated-desk;
+
+        @include screen('sm') {
+          box-shadow: inset 0 -4px 0 $color-dedicated-desk;
+        }
+      }
+    }
+
+    &_blue {
+      border-bottom-color: $color-meeting-room;
+
+      &:hover,
+      &.active {
+        box-shadow: inset 0 -5px 0 $color-meeting-room;
+
+        @include screen('sm') {
+          box-shadow: inset 0 -4px 0 $color-meeting-room;
+        }
+      }
+    }
+
+    &_green {
+      border-bottom-color: $color-office-space;
+
+      &:hover,
+      &.active {
+        box-shadow: inset 0 -5px 0 $color-office-space;
+
+        @include screen('sm') {
+          box-shadow: inset 0 -4px 0 $color-office-space;
+        }
+      }
     }
   }
 
-  &_yellow {
-    border-bottom:1px solid $color-yellow;
-    &.active {
-      border-bottom:6px solid  $color-yellow;
-    }
+  &+&-content {
+    margin-top: 30px;
   }
-  &_red {
-    border-bottom:1px solid $color-red;
-    &.active {
-      border-bottom: 6px solid $color-red;
-    }
-  }
-
-  &_blue {
-    border-bottom:1px solid $color-blue;
-    &.active {
-      border-bottom: 6px solid $color-blue;
-    }
-  }
-
-  &_green {
-    border-bottom:1px solid $color-green;
-    &.active {
-      border-bottom: 6px solid $color-green;
-    }
-  }
- 
-
-  & + &-content { margin-top: 30px; }
 
   &-content {
     margin-bottom: 130px;
+
     &__wrapper {
       display: none;
       opacity: 0;
