--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -31,6 +31,21 @@
     }
   }
 
+  &_size9 {
+    width: 9px;
+    height: 9px;
+  }
+
+  &_size10 {
+    width: 10px;
+    height: 10px;
+  }
+
+  &_size17 {
+    width: 17px;
+    height: 17px;
+  }
+
   &_orange {
     background-color: $color-hot-desk;
   }
