--- a/app/blocks/offer-info/offer-info.pug
+++ b/app/blocks/offer-info/offer-info.pug
@@ -1,5 +1,5 @@
 mixin offer-info(tag, price)
   +b(tag || 'div').offer-info&attributes(attributes)
-    +e.title
+    +e.head
       block
     +e.price!= price
