--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -124,6 +124,22 @@
     }
   }
 
+  &_smaller-mg {
+    margin-bottom: 72px;
+
+    @include screen('xl') {
+      margin-bottom: 75px;
+    }
+
+    @include screen('lg') {
+      margin-bottom: 48px;
+    }
+
+    @include screen('sm') {
+      margin-bottom: 37px;
+    }
+  }
+
   &_promo {
     margin-bottom: 89px;
 
