--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -149,4 +149,37 @@
       @include text12;
     }
   }
+
+  &_around {
+    #{$b}__boxes {
+      min-height: 9px;
+
+      @include screen('sm') {
+        margin-top: 12px;
+      }
+
+      .box {
+        height: 9px;
+        width: 9px;
+
+        @include screen('sm') {
+          height: 9px;
+          width: 9px;
+        }
+      }
+    }
+
+    #{$b}__location {
+      @include screen('sm') {
+        margin-top: -4px;
+      }
+    }
+
+    #{$b}__heart {
+      @include screen('sm') {
+        top: 13px;
+        right: 12px;
+      }
+    }
+  }
 }
