--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -61,4 +61,5 @@ include ../components/footer/footer
 include ../components/header/header
 include ../components/lead/lead
 include ../components/main-menu/main-menu
+include ../components/offer-short/offer-short
 include ../components/ui-kit/ui-kit
