--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -71,6 +71,8 @@ $color-form-border-gray: #373e47;
 $color-accent: #48a4b5;
 $color-bus: #c64444;
 $color-plane: #60a2d0;
+$color-accordion-button: #343d4a;
+$color-available: #20cbca;
 
 // ##########
 // Transitions
