--- a/app/blocks/accordion/accordion.pug
+++ b/app/blocks/accordion/accordion.pug
@@ -1,11 +1,9 @@
-mixin accordions(isMultiple)
-  - var defaultMultiple = typeof isMultiple !== undefined ? !!isMultiple : true
-
-  +b.accordions&attributes(attributes)(data-accordion-multiple=`${defaultMultiple}`)
+mixin accordions()
+  +b.accordions&attributes(attributes)
     block
 
 mixin accordion
-  +b.accordion&attributes(attributes)
+  +b.accordion.js-accordion-open&attributes(attributes)
     block
 
 mixin accordion-header
@@ -13,7 +11,7 @@ mixin accordion-header
     block
 
 mixin accordion-button
-  +e.button.js-accordion-button&attributes(attributes)
+  +e.button&attributes(attributes)
     block
 
 mixin accordion-body
