--- a/app/blocks/content-zone/content-zone.scss
+++ b/app/blocks/content-zone/content-zone.scss
@@ -174,6 +174,14 @@
 
     p {
 
+      &:not(:last-child) {
+        margin-bottom: 25px;
+
+        @include screen('sm') {
+          margin-bottom: 30px;
+        }
+      }
+
       small {
         @include text-small;
 
@@ -182,7 +190,17 @@
     }
 
     ul {
-      line-height: (34/15);
+      line-height: (19/15);
+
+      li {
+        &:not(:last-child) {
+          margin-bottom: 15px;
+        }
+
+        &::before {
+          top: 5px;
+        }
+      }
     }
   }
 }
