--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -117,11 +117,14 @@
   }
 
   &+&-content {
-    margin-top: 30px;
+    margin-top: 18px;
+
+    @include screen('sm') {
+      margin-top: 10px;
+    }
   }
 
   &-content {
-    margin-bottom: 130px;
 
     &__wrapper {
       display: none;
