--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -67,10 +67,144 @@ block content
           +tab()(data-tab-target="tab4")._green Office space
         +tabs-content
           +tab-wrapper()(data-tab="tab1" data-tab-group="offer").active
+            +accordions
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short
+                    +offer-info('', '&pound;185 per month')._line.__info
+                      +box._size17._orange.hide-from-sm
+                      +e.title Hot desk
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available AVIALABLE NOW
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                      ul
+                        li 24 hours access
+                        li Pets allowed
+                        li Entrance only with electronic card
+                        li Silent time from 10pm till 8am
+                        li First and last months for offices are paid before letting start
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short
+                    +offer-info('', '&pound;211 per month')._line.__info
+                      +box._size17._orange.hide-from-sm
+                      +e.title Hot desk
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available AVIALABLE NOW
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                      ul
+                        li 24 hours access
+                        li Pets allowed
+                        li Entrance only with electronic card
+                        li Silent time from 10pm till 8am
+                        li First and last months for offices are paid before letting start
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short
+                    +offer-info('', '&pound;177 per month')._line.__info
+                      +box._size17._orange.hide-from-sm
+                      +e.title Hot desk
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available AVIALABLE NOW
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+                      ul
+                        li 24 hours access
+                        li Pets allowed
+                        li Entrance only with electronic card
+                        li Silent time from 10pm till 8am
+                        li First and last months for offices are paid before letting start
           +tab-wrapper()(data-tab="tab2" data-tab-group="offer")
+            +accordions
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short.is-not-available
+                    +offer-info('', '&pound;185 per month')._line.__info
+                      +box._size17._red.hide-from-sm
+                      +e.title dedicated desk
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available NOT AVAILABLE
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short
+                    +offer-info('', '&pound;211 per month')._line.__info
+                      +box._size17._red.hide-from-sm
+                      +e.title dedicated desk
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available AVIALABLE NOW
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +tab-wrapper()(data-tab="tab3" data-tab-group="offer")
+            +accordions
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short
+                    +offer-info('', '&pound;211 per month')._line.__info
+                      +box._size17._blue.hide-from-sm
+                      +e.title meetin room
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available AVIALABLE NOW
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +tab-wrapper()(data-tab="tab4" data-tab-group="offer")
-  +section
+            +accordions
+              +accordion
+                +accordion-button
+                +accordion-body
+                  +offer-short.is-not-available
+                    +offer-info('', '&pound;185 per month')._line.__info
+                      +box._size17._green.hide-from-sm
+                      +e.title office space
+                      +button-heart._gray._small.js-heart.hide-from-sm
+                    +e.status
+                      +e.buttons
+                        +button-heart._gray._small.__button._heart.js-heart.hide-sm
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
+                        +button('a')._smaller.__button Request Reservation
+                      +e.available NOT AVAILABLE
+                    +content-zone._small.__content
+                      p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+  +section._smaller-mg
     +section-header
       .container
         +section-title('h3') You may also like spaces around
@@ -79,4 +213,4 @@ block content
       +slider(true, false)._sm-btn-hide.js-slider-spaces-inner
           each item in spaces
             +slide
-              +space(item)(href="#")
+              +space-around(item)(href="#")
